--- a/templates/index.html
+++ b/templates/index.html
@@ -284,34 +284,34 @@
         <div class="container">
             <h2>اخبار و رویدادها</h2>
             <div class="archive">
-                <a href="/news">آرشیو اخبار</a>
+                <a href="{% url 'chamran:newsList' %}">آرشیو اخبار</a>
             </div>
             <div class="row" id="owl-news">
-                                <div class="col-md-4 item">
-                                    <div class="news-item">
-                                        <div class="news-item-body">
-                                            <div class="img">
-                                                <a href="http://chamranteam.ir/posts/industry-procedure">
-                                                    <img src="{% static '' %}" alt="نحوه تعامل «چمران تیم» با صنایع">
-                                                </a>
-                                            </div>
-                                            <div class="cont">
-                                                <a href="http://chamranteam.ir/posts/industry-procedure">
-                                                    <h3>نحوه تعامل «چمران تیم» با صنایع</h3>
-                                                </a>
-                                                <p>در این متن، به جزئیات نحوه همکاری صنایع با چمران تیم اشاره خواهد شد.</p>
-                                                <div class="row">
-                                                    <div class="col-7">
-                                                        23 تیر 1398
-                                                    </div>
-                                                    <div class="col-5 text-right">
-                                                        <a href="http://chamranteam.ir/posts/industry-procedure">ادامه مطلب</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                <div class="col-md-4 item">
+                    <div class="news-item">
+                        <div class="news-item-body">
+                            <div class="img">
+                                <a href="http://chamranteam.ir/posts/industry-procedure">
+                                    <img src="{% static '' %}" alt="نحوه تعامل «چمران تیم» با صنایع">
+                                </a>
+                            </div>
+                            <div class="cont">
+                                <a href="http://chamranteam.ir/posts/industry-procedure">
+                                    <h3>نحوه تعامل «چمران تیم» با صنایع</h3>
+                                </a>
+                                <p>در این متن، به جزئیات نحوه همکاری صنایع با چمران تیم اشاره خواهد شد.</p>
+                                <div class="row">
+                                    <div class="col-7">
+                                        23 تیر 1398
+                                    </div>
+                                    <div class="col-5 text-right">
+                                        <a href="http://chamranteam.ir/posts/industry-procedure">ادامه مطلب</a>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
