--- a/templates/chamran_admin/news_list.html
+++ b/templates/chamran_admin/news_list.html
@@ -12,12 +12,12 @@
                         <div class="news-item">
                             <div class="news-item-body">
                                 <div class="img">
-                                    <a href="/{{ news.link }}">
+                                    <a href="{% url 'chamran:newsDetail' news.uuid %}">
                                         <img src="{{ news.topPicture }}" alt="{{ news.title }}">
                                     </a>
                                 </div>
                                 <div class="cont">
-                                    <a href="/{{ news.link }}">
+                                    <a href="{% url 'chamran:newsDetail' news.uuid %}">
                                         <h3>{{ news.title }}</h3>
                                     </a>
                                     <p>{{ news.summary }}</p>
@@ -26,7 +26,7 @@
                                             {{ news.date_submitted }}
                                         </div>
                                         <div class="col-5 text-right">
-                                            <a href="/{{ news.link }}">ادامه مطلب</a>
+                                            <a href="{% url 'chamran:newsDetail' news.uuid %}">ادامه مطلب</a>
                                         </div>
                                     </div>
                                 </div>
