--- a/industry/templates/industry/layouts/select_usage.html
+++ b/industry/templates/industry/layouts/select_usage.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load widget_tweaks %}
-<div class="modal fade show" id="selectUsage" tabindex="-1" role="dialog" aria-labelledby="selectUsageLabel"
+<div class="modal fade show" id="selectUsage" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="selectUsageLabel"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
