--- a/industry/templates/industry/layouts/initial_information2.html
+++ b/industry/templates/industry/layouts/initial_information2.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load widget_tweaks %}
-<div class="modal fade" id="initialInformation" tabindex="-1" role="dialog" aria-labelledby="initialInformationLabel"
+<div class="modal fade" id="initialInformation" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="initialInformationLabel"
      aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
