--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,10 @@
     padding-bottom: 40px;
 }
 
+p {
+    direction: rtl;
+}
+
 .p-bottom-0 {
     padding-bottom: 0 !important;
 }
@@ -161,7 +165,7 @@ body.notFound {
 }
 
 @media (max-width: 767px) {
-    .card.registration img {
+    .card.registration img:not(.captcha) {
         display: none;
     }
 }
@@ -2925,6 +2929,7 @@ div.no-project > span.disable-border-button {
 .h1, .h2, .h3, .h4, .h5 {
     color: #484848 !important;
     font-weight: bold !important;
+    direction: rtl;
 }
 
 @media (max-width: 767px) {
