--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -85,6 +85,11 @@
                     {% if project.status == 2 %}
                         <div class="card box flow-root-display w-100">
                             <div class="box-body">
+                                <div class="row mbottom-lg-25 d-block d-lg-none ">
+                                    <div class="col-lg-12 text-right">
+                                        <h6>پروژه {{ project.project_form.project_title_persian }}</h6>
+                                    </div>
+                                </div>
                                 <div class="row" style="direction: ltr!important">
                                     <div class="col-lg-4 col-xs-3">
                                         <div class="project-progress mbottom-lg-25">
@@ -128,7 +133,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-8 col-xs-9">
-                                        <div class="row mbottom-lg-25">
+                                        <div class="row mbottom-lg-25 d-none d-lg-block ">
                                             <div class="col-lg-12 text-right">
                                                 <h6>پروژه {{ project.project_form.project_title_persian }}</h6>
                                             </div>
@@ -289,7 +294,7 @@
                                                                                             <h3>{{ researcher.fullname }}</h3>
                                                                                             <button value="{{ project.pk }}"
                                                                                                     id="{{ researcher.id }}"
-                                                                                                     data-url="{% url 'researcher:show_resume_preview' %}"
+                                                                                                    data-url="{% url 'researcher:show_resume_preview' %}"
                                                                                                     data-toggle="modal"
                                                                                                     data-target="#researcherInfo">
                                                                                                 رزومه
