--- a/expert/templates/expert/layouts/researcher_info_dialog.html
+++ b/expert/templates/expert/layouts/researcher_info_dialog.html
@@ -34,14 +34,17 @@
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <div class="request-response">
-                                        <button class="border-button confirm-researcher"
-                                                id="researcher-confirm-" value="">تایید
-                                        </button>
-                                        <button class="border-button fail-button refuse-researcher"
-                                                id="researcher-reject-" value="">رد
-                                        </button>
-                                    </div>
+                                    {% url 'expert:index' as index_path %}
+                                    {% if not request.path == index_path %}
+                                        <div class="request-response">
+                                            <button class="border-button confirm-researcher"
+                                                    id="researcher-confirm-" value="">تایید
+                                            </button>
+                                            <button class="border-button fail-button refuse-researcher"
+                                                    id="researcher-reject-" value="">رد
+                                            </button>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -56,18 +59,18 @@
                         <div class="row">
                             <div class="col-12">
                                 <div id="technique-list" style="margin-top: 30px">
-{#                                    <div class="technique-item">#}
-{#                                        <span class="technique-name">PCR</span>#}
-{#                                        <span class="grade grade__A"></span>#}
-{#                                    </div>#}
-{#                                    <div class="technique-item">#}
-{#                                        <span class="technique-name">PCR</span>#}
-{#                                        <span class="grade grade__B"></span>#}
-{#                                    </div>#}
-{#                                    <div class="technique-item">#}
-{#                                        <span class="technique-name">PCR</span>#}
-{#                                        <span class="grade"></span>#}
-{#                                    </div>#}
+                                    {#                                    <div class="technique-item">#}
+                                    {#                                        <span class="technique-name">PCR</span>#}
+                                    {#                                        <span class="grade grade__A"></span>#}
+                                    {#                                    </div>#}
+                                    {#                                    <div class="technique-item">#}
+                                    {#                                        <span class="technique-name">PCR</span>#}
+                                    {#                                        <span class="grade grade__B"></span>#}
+                                    {#                                    </div>#}
+                                    {#                                    <div class="technique-item">#}
+                                    {#                                        <span class="technique-name">PCR</span>#}
+                                    {#                                        <span class="grade"></span>#}
+                                    {#                                    </div>#}
                                 </div>
                             </div>
                         </div>
