--- a/researcher/templates/researcher/forbid_access.html
+++ b/researcher/templates/researcher/forbid_access.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'researcher/css/style.css' %}">
 </head>
 <body>
-<div class="main">
+<div class="main forbid-background">
     <div class="top-bar">
         <img src="{% static 'researcher/img/logoName.png' %}" alt="chamranTeam">
         <div class="dropdown">
