debug skype bugs

--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -126,14 +126,14 @@
                  height="150px">
         {% endif %}
         <h5>{% block name %}{% endblock %}</h5>
-        <p dir="rtl" class="scoreDiv text-right">امتیاز:
-            <span>{{ request.user.expertuser.expert_point|default:0 }}</span>/10</p>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0"
-                 aria-valuemax="100" style="width: {{ request.user.expertuser.score }}px">
-                <span class="sr-only">{{ score|default:0 }}% completed</span>
-            </div>
-        </div>
+{#        <p dir="rtl" class="scoreDiv text-right">امتیاز:#}
+{#            <span>{{ request.user.expertuser.expert_point|default:0 }}</span>/10</p>#}
+{#        <div class="progress">#}
+{#            <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0"#}
+{#                 aria-valuemax="100" style="width: {{ request.user.expertuser.score }}px">#}
+{#                <span class="sr-only">{{ score|default:0 }}% completed</span>#}
+{#            </div>#}
+{#        </div>#}
         <div class="hr"></div>
         <ul class="list-group">
             {% url 'expert:index' as index_url %}
